# wally

./: .cirrus.yml  .drone.sec  .drone.sec.yml  .drone.yml  .gitignore  .gitmodules  .travis.yml  BUILD.md  CHANGELOG.md  CI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  LICENSE  LICENSE.md  LIMITATIONS.md  MONOREPO.md  Makefile  README.md  ROADMAP.md  SUMMARY.md  SUPPORT.md  VERSION  book.json  cover.docx  default.nix  diff.patch  erbau.py  fallor-readable.txt  intro.md  ponyc-master.diff  rules.mk  run_market_spread.sh  run_market_spread_jr.sh  shell.nix  start.sh  start_metrics.sh  stop.sh  test.t
.circleci/: clone_tracker.sh  config.yml
.cirrusci/: clone_tracker.sh
.for_maintainers/: UPDATING_PONYC.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.release/: .gitignore  Vagrantfile  ami-release.sh  bintray-artifacts-release.sh  bootstrap.sh  docker-release.sh  documentation-release.sh  gitbook-release.sh  rc.bash  rc.sh  release.sh  rp.sh  update-release-artifacts.sh  update-wallaroo-up-md5.sh
Spike/: README.md
apps/: BUILDING_WALLAROO_APPS_FOR_BANK_MACHINES.md  README.md  WALLAROO_MARKET_SPREAD_JR_LAPTOP_RUN.md  WALLAROO_PERFORMANCE_TESTING.md  WALLAROO_PERFORMANCE_TESTING_ARIZONA_MULTI.md  WALLAROO_PERFORMANCE_TESTING_ARIZONA_SINGLE.md  WALLAROO_PERFORMANCE_TESTING_MARKETSPREAD.md
apps/arizona-jr-app/: CMakeLists.txt  build.sh  distribute.sh  hosts.txt
apps/arizona-jr-app/arizona-jr-app/: main.pony
apps/arizona-jr-app/cpp/: Arizona.cpp
apps/arizona-jr-app/hpp/: Arizona.hpp
atkin/: Makefile  README.md  atkin.pony  main.pony  toy_example.py  wactor.py
book/: Makefile  language_support.md  overview.md  what-is-wallaroo.md
buffy/: Dockerfile  MQ_udp.py  README.md  UDP_listener.py  buffy.pony  computations.pony  feeder.py  leader-tcp.pony  metrics.sh  metrics_receiver.py  metrics_run.py  run.sh  sink.py  udp-client.py  worker-tcp.pony  worker.py
buffy-pony/: .gitignore  README.md  buffy.pony  bundle.json  bytes.pony  computations.pony  leader-tcp.pony  message-ids.pony  message.pony  proxies.pony  serialize.pony  steps.pony  tcp-messages.pony  test.pony  worker-tcp.pony
connectors/: kafka_sink  kafka_source  kinesis_sink  kinesis_source  rabbitmq_source  redis_hash_sink  redis_subscriber_source  s3_bucket_sink  udp_sink  udp_source
cpp_api/: Makefile  eclipse.sh
dagon/: .gitignore  Dockerfile  Makefile  README.md  bundle.json  dagon.ini  dagon.org  dagon.pony  dagon.py  dagon.results  docker-dagon-child.ini  docker-double-divide-arbitrary-args.ini  docker-double-divide-aws-leader.ini  docker-double-divide-aws-swarm.ini  docker-double-divide.ini  docker-example.ini  docker-market-spread-aws-leader.ini  docker-market-spread-aws-swarm.ini  docker-sender-receiver.ini  docker-topology-for-double-divide.org  dotgen.py  double-divide-arbitrary-args.ini  double-divide.ini  example.ini  giles_parser.py  howto-run-double-divide-with-docker.org  howto-run-market-spread-demo-in-AWS.org  howto-test-buffy-performance-in-AWS.org  metrics.py  word-count.ini  word-length-count.ini
dagon-pony/: .gitignore  README.md  bundle.json  dagon-messages.pony  dagon-pony.org  dagon.pony  double-divide.ini  example.ini
demos/: Vagrantfile  bootstrap.sh
doc/: README.md  SendenceLinks.org  TLAToolbox.md  buffy-for-engineers.asciidoc  buffy-theory.org  flows-and-traces.org  org-mode-preferences.el  run-setup.md  sendence-links.org
docker/: docker-setup.sh  env-setup  environment-setup.sh
documentation/: README.md  config.toml
erbau/: erbau.py
examples/: Makefile  README.md
fallor/: .gitignore  fallor  fallor.pony
fix-generator/: .gitignore  Makefile
fixish-converter/: .gitignore  fixish.pony
fixish_converter/: Makefile
flows/: flow--graphs.py  flow-graphs.py  flow-parser.py  flowdotgen.py
giles/: .gitignore  Makefile  README.md  giles  giles.pony
horse-snake/: README.md
lib/wallaroo/cpp-api/: CMakeLists.txt
lib/wallaroo/cpp-api/cpp/cppapi/: CMakeLists.txt
lib/wallaroo/cpp-api/cpp/cppapi/cpp/: ApiHooks.cpp  Buffer.cpp  Hashable.cpp  Logger.cpp  ManagedBuffer.cpp  ManagedObject.cpp  RawBuffer.cpp  tester.cpp
lib/wallaroo/cpp-api/cpp/cppapi/hpp/: ApiHooks.hpp  Buffers.hpp  Computation.hpp  Data.hpp  Hashable.hpp  ManagedObject.hpp  PartitionFunction.hpp  Serializable.hpp  SinkEncoder.hpp  SourceDecoder.hpp  State.hpp  StateChange.hpp  UserHooks.hpp
lib/wallaroo/cpp-api/pony/: computations.pony  data.pony  key.pony  main.pony  managed.pony  partition_function.pony  serializable.pony  sink_encoder.pony  source_decoder.pony  state.pony  state_change.pony  state_change_builder.pony  state_change_repository_helper.pony
machida/: Makefile  README.md  api.md  bundle.json  machida.pony  machida_startup_help.pony  main.pony  signal_handling.pony  wallaroo.py  wallaroo_test.py
machida3/: Makefile  README.md  bundle.json  machida.pony  main.pony  wallaroo_test.py
merrick/: .gitignore  README.md  merrick.pony
metrics-collector/: .gitignore  README.md  metrics-collector.pony
metrics-receiver/: .gitignore  README.md  bundle.json  metrics-handlers.pony  metrics-receiver  metrics-receiver.pony  outputs.pony  test.pony
misc/: .gitignore  Makefile  README.md  activate  example-tester.bash  release-tester.bash  update-wallaroo-up-checksum.sh  wallaroo-up-tester.bash  wallaroo-up.sh
monitoring_hub/: Makefile  README.md  mix.exs
orchestration/: validate_environment.sh
robson/: .gitignore  Makefile  bundle.json  robson.pony
scripts/: docker-setup.sh  docker_release.sh
spike/: .gitignore  Dockerfile  README.md  buffy-protocol.pony  copy-libraries.sh  dockerize-spike.org  spike  spike.pony  spike_destructor.pony  spike_modes.pony  spike_udp.pony
testing/: Makefile  README.md
testing/performance/apps/market-spread-cpp/: .gitignore  CMakeLists.txt  Makefile  Makefile.example
testing/performance/apps/market-spread-cpp/cpp/: market-spread-cpp.cpp
testing/performance/apps/market-spread-cpp/hpp/: market-spread-cpp.hpp
testing/performance/apps/market-spread-cpp/market-spread-cpp/: market-spread-cpp.pony
ui/: README.md  (+2 more)
(+3459 files in other folders)
